some fuckery to fix the applets on mobile

--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -100,7 +100,7 @@
 @layer components {
   .text-xl {
     font-size: 24px;
-    line-height: 1.5;
+    line-height: 1.4;
     font-weight: 500;
   }
   .text-prose {
